# POO

./: CMakeLists.txt
Ficha1/: CMakeLists.txt
Ficha1/1/: main.cpp
Ficha1/2/: main.cpp
Ficha1/3/: main.cpp
Ficha1/4/: main.cpp
Ficha1/5/: main.cpp
Ficha1/6/: main.cpp
Ficha1/7/: main.cpp
Ficha2/: CMakeLists.txt
Ficha2/1/: other.cpp  other.h  sol1.cpp  sol2.cpp  sol3.cpp  sol4.cpp
Ficha2/2/: main.cpp
Ficha2/3/: sol1.cpp  sol2.cpp
Ficha2/4/: sol1.cpp  sol2.cpp
Ficha2/5/: main.cpp
Ficha2/6/: main.cpp  main_bad.cpp
Ficha3/: CMakeLists.txt
Ficha3/1/: main.cpp  table.cpp  table.h
Ficha3/2/: automovel.cpp  automovel.h  main.cpp
