add_executable(F2E1_S1 1/sol1.cpp)
add_executable(F2E1_S2 1/sol2.cpp)
add_executable(F2E1_S3 1/sol3.cpp)
add_executable(F2E1_S4 1/sol4.cpp)

add_executable(F2E2 2/main.cpp)

add_executable(F2E3_S1 3/sol1.cpp)
add_executable(F2E3_S2 3/sol2.cpp)


add_executable(F2E4_S1 4/sol1.cpp)
add_executable(F2E4_S2 4/sol2.cpp)

add_executable(F2E5 5/main.cpp)

add_executable(F2E6 6/main.cpp)
add_executable(F2E6_Bad 6/main_bad.cpp)